Add table metadata and query data endpoints
Also add custom errorhandler with the purpose to send more
meaningful error for the client to parse.
