# server/main.py
@@ -1,14 +1,18 @@
 import os
-from typing import Optional
+from io import StringIO
 
 import uvicorn
 from dotenv import load_dotenv
-from fastapi import Body, Depends, FastAPI, File, Form, HTTPException, UploadFile
+from fastapi import Body, Depends, FastAPI, HTTPException, Request
+from fastapi.responses import JSONResponse
 from fastapi.security import HTTPAuthorizationCredentials, HTTPBearer
 from fastapi.staticfiles import StaticFiles
 
-from models.api import FilteredTableListRequest, FilteredTableListResponse, TableInfo
-from server.table import TableSearcher
+from models.api import (FilteredTableListRequest, FilteredTableListResponse,
+                        TableColumnInfo, TableDataQueryRequest,
+                        TableDataQueryResponse, TableInfo,
+                        TableMetadataResponse)
+from server.table import TableQuerier, TableSearcher, get_table_data
 
 load_dotenv(".env")
 
@@ -21,6 +25,16 @@ def validate_token(credentials: HTTPAuthorizationCredentials = Depends(bearer_sc
     if credentials.scheme != "Bearer" or credentials.credentials != BEARER_TOKEN:
         raise HTTPException(status_code=401, detail="Invalid or missing token")
     return credentials
+
+
+class CustomHTTPException(HTTPException):
+    def __init__(self, status_code: int, detail: str):
+        super().__init__(status_code=status_code, detail=detail)
+
+
+async def custom_http_exception_handler(request: Request, exc: CustomHTTPException):
+    print(exc.status_code, exc.detail)
+    return JSONResponse(status_code=exc.status_code, content={"detail": exc.detail})
 
 
 app = FastAPI(dependencies=[Depends(validate_token)])
@@ -36,6 +50,7 @@ sub_app = FastAPI(
     dependencies=[Depends(validate_token)],
 )
 app.mount("/sub", sub_app)
+app.add_exception_handler(CustomHTTPException, custom_http_exception_handler)
 
 table_searcher = TableSearcher()
 
@@ -52,22 +67,27 @@ async def filter_tables_by_query(query: str):
 async def filtered_table_list(
     request: FilteredTableListRequest = Body(...),
 ):
-    # try:
-    filtered_tables = await filter_tables_by_query(
-        request.query,
-    )
-    return FilteredTableListResponse(filtered_tables=filtered_tables)
-    # except Exception as e:
-    #
-    #     print("Error:", e)
-    #     raise HTTPException(status_code=500, detail="Internal Service Error")
+    try:
+        filtered_tables = await filter_tables_by_query(
+            request.query,
+        )
+        return FilteredTableListResponse(filtered_tables=filtered_tables)
+
+    except Exception as e:
+        error_message = str(e)
+        raise CustomHTTPException(status_code=500, detail=error_message)
 
 
 @sub_app.post(
     "/filtered_table_list",
     response_model=FilteredTableListResponse,
     # NOTE: We are describing the shape of the API endpoint input due to a current limitation in parsing arrays of objects from OpenAPI schemas. This will not be necessary in the future.
-    description="Accepts search strings array each with a natural language query for a table. Break down complex questions into sub-questions. Refine results by criteria, e.g. time / source, don't do this often. Split queries if ResponseTooLargeError occurs.",
+    description="""Accepts a natural language query to find matching CBS opendata tables.
+Returns the table identifiers and summaries including time periods.
+Break down complex questions into sub-questions.
+Split queries if ResponseTooLargeError occurs.""".replace(
+        "\n", " "
+    ),
 )
 async def filtered_table_list(
     request: FilteredTableListRequest = Body(...),
@@ -78,8 +98,112 @@ async def filtered_table_list(
         )
         return FilteredTableListResponse(filtered_tables=filtered_tables)
     except Exception as e:
-        print("Error:", e)
-        raise HTTPException(status_code=500, detail="Internal Service Error")
+        error_message = str(e)
+        raise CustomHTTPException(status_code=500, detail=error_message)
+
+
+@app.post(
+    "/table_metadata/{table_id}",
+    response_model=TableMetadataResponse,
+)
+async def table_metadata(table_id: str):
+    try:
+        df = get_table_data(table_id)
+        column_info = [
+            TableColumnInfo(column_name=col, column_type=str(df[col].dtype))
+            for col in df.columns
+        ]
+        csv_buffer = StringIO()
+        df.head(5).to_csv(csv_buffer, index=False)
+        example_data = csv_buffer.getvalue()
+
+        return TableMetadataResponse(
+            table_id=table_id, column_info=column_info, example_data=example_data
+        )
+    except Exception as e:
+        error_message = str(e)
+        raise CustomHTTPException(status_code=510, detail=error_message)
+
+
+@sub_app.post(
+    "/table_metadata/{table_id}",
+    response_model=TableMetadataResponse,
+    description="""Returns metadata for a table given an identifier.
+Metadata is the column information and example data.
+""".replace(
+        "\n", " "
+    ),
+)
+async def table_metadata(table_id: str):
+    try:
+        df = get_table_data(table_id)
+        column_info = [
+            TableColumnInfo(column_name=col, column_type=str(df[col].dtype))
+            for col in df.columns
+        ]
+        csv_buffer = StringIO()
+        df.head(5).to_csv(csv_buffer, index=False)
+        example_data = csv_buffer.getvalue()
+
+        return TableMetadataResponse(
+            table_id=table_id, column_info=column_info, example_data=example_data
+        )
+    except Exception as e:
+        error_message = str(e)
+        raise CustomHTTPException(status_code=510, detail=error_message)
+
+
+@app.post(
+    "/query_table_data",
+    response_model=TableDataQueryResponse,
+)
+async def query_table_data(request: TableDataQueryRequest):
+    try:
+        df = get_table_data(request.table_id)
+
+        # Initialize the TableQuerier with the DataFrame
+        table_querier = TableQuerier(df)
+
+        # Perform the natural language query
+        pandas_query, result_df = table_querier.query(request.natural_language_query)
+
+        # Serialize the resulting data as CSV
+        csv_buffer = StringIO()
+        result_df.to_csv(csv_buffer, index=False)
+        data = csv_buffer.getvalue()
+        return TableDataQueryResponse(processed_query=pandas_query, data=data)
+    except Exception as e:
+        error_message = str(e)
+        raise CustomHTTPException(status_code=510, detail=error_message)
+
+
+@sub_app.post(
+    "/query_table_data",
+    response_model=TableDataQueryResponse,
+    description="""Accepts a CBS opendata table identifier and a natural language query on this table.
+Table identifiers and dataset time periods can be found with /filtered_table_list endpoint.
+Split queries if ResponseTooLargeError occurs.""".replace(
+        "\n", " "
+    ),
+)
+async def query_table_data(request: TableDataQueryRequest):
+    try:
+        df = get_table_data(request.table_id)
+
+        # Initialize the TableQuerier with the DataFrame
+        table_querier = TableQuerier(df)
+
+        # Perform the natural language query
+        pandas_query, result_df = table_querier.query(request.natural_language_query)
+
+        # Serialize the resulting data as CSV
+        csv_buffer = StringIO()
+        result_df.to_csv(csv_buffer, index=False)
+        data = csv_buffer.getvalue()
+        return TableDataQueryResponse(processed_query=pandas_query, data=data)
+    except Exception as e:
+        error_message = str(e)
+        raise CustomHTTPException(status_code=510, detail=error_message)
 
 
 def start():
